@@ -1,5 +1,0 @@
-'use strict'
-
-module.exports.register = (registry) => {
-  Opal.Asciidoctor.Tabs.Extensions.$register(registry)
-}
